--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "my-node-app",
+  "name": "simple-node-app",
   "version": "1.0.0",
+  "description": "A simple Node.js app for Vercel deployment testing",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.17.1"
