--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,7 +3,7 @@ name: Deploy to Vercel
 on:
   push:
     branches:
-      - master  # Trigger deployment when code is pushed to the main branch
+      - main  # Trigger the workflow when changes are pushed to the main branch
 
 jobs:
   deploy:
@@ -29,4 +29,3 @@ jobs:
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           vercel-args: '--prod'  # Deploy to production
-
