--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,7 +3,7 @@ name: Deploy to Vercel
 on:
   push:
     branches:
-      - main  # Trigger the workflow when changes are pushed to the main branch
+      - master  # Trigger the workflow when changes are pushed to the main branch
 
 jobs:
   deploy:
